--- a/Tests.Xevle.Math/Tests.Xevle.Math.csproj
+++ b/Tests.Xevle.Math/Tests.Xevle.Math.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tuples\Tuple3dcTests.cs" />
+    <Compile Include="Tuples\Tuple3dsTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
